Stub verification removal and clean up